<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lol"
    android:name="com.google.android.gms.maps.menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.olivier.tobeortohave.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_insert_chart_black_96dp"
                android:text="@string/Statistiques"
                android:onClick="openStats"/>

            <Button
                android:id="@+id/shops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_store_black_96dp"
                android:onClick="openStores"
                android:text="@string/Magasins" />

            <Button
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:drawableTop="@drawable/ic_map_black_96dp"
                android:onClick="openMap"
                android:text="@string/Carte" />

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:drawableTop="@drawable/ic_search_black_96dp"
                android:onClick="openSearch"
                android:text="@string/Rechercher" />

        </GridLayout>

    </ScrollView>

</LinearLayout>