<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shop_phone1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_phone_black_24dp" />

            <ImageButton
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_call_shop"
                app:srcCompat="@drawable/ic_phone_black_24dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/shop_name"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shop_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_store_black_24dp" />

            <TextView
                android:id="@+id/shop_zipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shop_email"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black_24dp" />

            <ImageButton
                android:id="@+id/btn_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_send_email_shop"
                app:srcCompat="@drawable/ic_email_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shop_webPage"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_link_black_24dp" />

            <ImageButton
                android:id="@+id/btn_webPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_go_webPage_shop"
                app:srcCompat="@drawable/ic_forward_black_24dp" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/caChart"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/employeesChart"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/maintenanceChart"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/prodrenvChart"
            android:layout_width="match_parent"
            android:layout_height="200dp" />


    </LinearLayout>


</ScrollView>